# zhixu

./: # 知序品牌策略与视觉规范 v1.1.md  .env.example  .gitignore  README.md  README_知序项目文档包.md  delete_games.ps1  docker-compose.yml  index.html  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  styles.css  tsconfig.base.json  vitest.config.ts  大模型工具调用文档.md  知序_AI学习科研管家_PRD_v1.1.md  知序_技术规定文档_v1.0.md  知序多端前端设计方案稿 v20.docx  知序多端前端设计方案稿 v20.txt
.claude/: settings.local.json
apps/desktop/: index.html  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: package.json
docs/: agent-canvas-workspace-design.md  code-interpreter.md  deep-thinking.md  function-calling.md  stream.md  web-extractor.md  web-search.md
skills/sensenova/sn-image-base/scripts/: extract_json.py  pyproject.toml  ruff.toml  sn_agent_runner.py
skills/sensenova/sn-image-base/scripts/sn_image_base/: __init__.py  configs.py  exceptions.py
skills/sensenova/sn-image-base/scripts/sn_image_base/generation/: __init__.py  nano_banana.py  openai_image.py  sensenova.py
skills/sensenova/sn-image-base/scripts/sn_image_base/generation/core/: __init__.py  client_base.py
skills/sensenova/sn-image-base/scripts/sn_image_base/llm/: __init__.py  anthropic_adapter.py  chat_completions_adapter.py  llm_adapter.py
skills/sensenova/sn-image-base/scripts/sn_image_base/utils/: error_utils.py  httpx_client.py
skills/sensenova/sn-image-base/scripts/sn_image_base/vlm/: __init__.py
(+408 files in other folders)
