[package]
name = "zhixu_desktop"
version = "0.1.0"
description = "ZhiXu AI desktop shell"
authors = ["ZhiXu"]
edition = "2021"

[lib]
name = "zhixu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
