[project]
name = "sn-image-base"
version = "0.1.0"
description = "Base-layer skill for the SenseNova-Skills project, providing low-level APIs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "scripts"
